@@ -338,7 +338,7 @@ $c->{lang_cookie_name} = "lang";
 # subject or allowing null in this case.
 $c->{browse_views} = [
 	{ id=>"year", allow_null=>1, fields=>"year", order=>"title/authors" },
-	#{ id=>"person", allow_null=>0, fields=>"authors.id/editors.id", order=>"title/authors", noindex=>1, nolink=>1, nohtml=>1, include=>1, citation=>"title_only", nocount=>1, nowrapper=>1 }
+	{ id=>"person", allow_null=>0, fields=>"authors.id/editors.id", order=>"title/authors", noindex=>1, nolink=>1, nohtml=>1, include=>1, citation=>"title_only", nocount=>1 }
 	{ id=>"subjects", allow_null=>0, fields=>"subjects", order=>"title/authors" }
 ];
 
@@ -463,17 +463,6 @@ my $CRYPTED_DBI = {
 	Auth_DBI_pwd_field  =>  "password",
 	Auth_DBI_grp_field  =>  "usertype",
 	Auth_DBI_encrypted  =>  "on" };
-
-#subscription
-#set-password
-#deposit
-#view-status
-#editor
-#staff-view -> view & search users & eprints in staff mode.
-#edit-subject
-#edit-user
-#change-email
-#change-user
 
 # Please the the documentation for a full explanation of user privs.
 
